<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_gradient"
    tools:context=".ui.activity.LandingActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dimen_dp136"
        android:layout_height="@dimen/dimen_dp136"
        android:src="@drawable/ic_happid"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/inter_extrabold"
                android:text="@string/best_markitplac"
                android:textColor="@color/text_color_landing"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23.5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="23.5dp"
                android:fontFamily="@font/inter_medium"
                android:lineHeight="24sp"
                android:text="@string/text_landing"
                android:textAlignment="center"
                android:textColor="@color/text_color_landing"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_start"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginStart="@dimen/btn_margin_side"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="@dimen/btn_margin_side"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/btn_color"
                android:fontFamily="@font/montserrat_regular"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:letterSpacing="0"
                android:text="@string/text_btn"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>