<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_gradient"
    tools:context=".ui.activity.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_dp8"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="@dimen/dimen_dp16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/create_profile"
            android:textColor="@color/text_color_landing"
            android:textSize="@dimen/text_sp16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgBack" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cons_appbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/set_profile"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="@id/profile_image"
        app:layout_constraintTop_toBottomOf="@id/profile_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textProfile">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:text="@string/first_name"
                android:textAlignment="textStart"
                android:textColor="@color/text_color_landing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginStart="@dimen/btn_margin_side"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/btn_margin_side"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:background="@drawable/selectable_edittext_background" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/text_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:text="Last Name"
                android:textAlignment="textStart"
                android:textColor="@color/text_color_landing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_name_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginStart="@dimen/btn_margin_side"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/btn_margin_side"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_last_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:background="@drawable/selectable_edittext_background" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/phone"
                android:fontFamily="@font/montserrat_regular"
                android:textAlignment="textStart"
                android:textColor="@color/text_color_landing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/last_name_layout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_text_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginStart="@dimen/btn_margin_side"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/btn_margin_side"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="0dp"
                    android:maxLength="10"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:background="@drawable/selectable_edittext_background" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/location_cardview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginStart="@dimen/btn_margin_side"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="@dimen/btn_margin_side"
                app:cardCornerRadius="@dimen/dimen_dp5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_text_layout">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="2dp"
                    android:background="@color/orange">


                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/btn_height"
                        android:layout_marginStart="15.5dp"
                        android:gravity="center_vertical"
                        android:text="@string/pick_your_current_location"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:fontFamily="@font/montserrat_regular"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginEnd="12dp"
                        android:src="@drawable/location"
                        app:layout_constraintBottom_toBottomOf="@id/location"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/location" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/text_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/or"
                android:fontFamily="@font/montserrat_regular"
                app:layout_constraintEnd_toEndOf="@id/location_cardview"
                app:layout_constraintStart_toStartOf="@id/location_cardview"
                app:layout_constraintTop_toBottomOf="@id/location_cardview" />


            <TextView
                android:id="@+id/post_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:text="@string/post_code"
                android:textAlignment="textStart"
                android:fontFamily="@font/montserrat_regular"
                android:textColor="@color/text_color_landing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_or" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_post_code"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginStart="@dimen/btn_margin_side"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/btn_margin_side"
                app:boxBackgroundMode="none"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="@id/post_code"
                app:layout_constraintStart_toStartOf="@id/post_code"
                app:layout_constraintTop_toBottomOf="@id/post_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/select_post_code_or_address"
                    android:padding="0dp"
                    android:textColorHint="@color/hint_color"
                    android:imeOptions="actionDone"
                    android:background="@drawable/selectable_edittext_background"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:layout_marginStart="@dimen/btn_margin_side"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="@dimen/btn_margin_side"
                android:layout_marginBottom="30dp"
                android:backgroundTint="@color/btn_color"
                app:cornerRadius="@dimen/dimen_dp5"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/submit"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:fontFamily="@font/montserrat_regular"
                android:letterSpacing="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_post_code" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>